feature: add authors route
